--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -321,7 +321,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     min-width: 320px;
-    background: blue;
+    background: grey;
     font-family: 'Open Sans','Helvetica Neue',Arial,Helvetica,sans-serif;
     font-size: 14px;
     line-height: 1.4285em;
