--- a/client/src/pages/CXPlaces/CXPlaces.css
+++ b/client/src/pages/CXPlaces/CXPlaces.css
@@ -4,6 +4,7 @@
     -webkit-box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
     margin: 1rem 0;
+    margin-left: 25%;
     padding: 1em 1em;
     border-radius: .28571429rem;
     border: 1px solid rgba(34,36,38,.15);	
@@ -24,7 +25,7 @@ a {
 .cxName{
 
   text-decoration: none; /* no underline */
-  color: black;
+  color: #0000009e;
 }
 
 .address{
@@ -37,7 +38,7 @@ a {
 .vertical_dotted_line
 {
     border-left: 1px dotted #999999;
-    height: 70px;
+    height: 120px;
     margin: 15px;
 } 
 
@@ -56,8 +57,53 @@ a {
 .fullList{
 
 }
+.buyGreen{
+  color:#85bb65 ;
+}
+.sellRed{
+  color:#c86b71;
+}
+.btn {
+    margin: 10px;
+    margin-left: 12px;
+}
+.btn-default {
+  background-color: white;
 
+}
 
+/*button.sellRed.btn.btn-default{
+  margin-left:14px;
+}*/
+button.sellButton.btn.btn-default{
+  margin-left:14px;
+
+}
+
+.buyButton{
+    color: #fff;
+    border: 1px solid #85bb65;
+    background-color: #85bb65;
+}
+
+.buyButton:hover{
+    color: #85bb65;
+    border: 1px solid #85bb65;
+    background-color: white;
+
+}
+.sellButton{
+  color: #fff;
+  border: 1px solid #c86b71;
+  background-color: #c86b71;
+}
+
+.sellButton:hover{
+    color: #c86b71;
+    border: 1px solid #c86b71;
+    background-color: white;
+
+}
 
 
 
