--- a/client/src/components/RatesDisplay/RatesDisplay.css
+++ b/client/src/components/RatesDisplay/RatesDisplay.css
@@ -2,3 +2,12 @@
 	color: white;
     padding-right: 10px;
 }
+
+.ratesDisplay{
+font-family: "Montserrat", sans-serif;
+}   
+
+.live{
+    margin-bottom: 5px;
+    font-size: 14px;
+}
