--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -25,3 +25,52 @@ h1 {
 	
 	text-align: center !important;
 }
+
+.backButt{
+
+    position: relative;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+    box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+    margin: 1rem 0;
+    margin-left: 66%;
+    padding: 1em 1em;
+    border-radius: .28571429rem;
+    border: 1px solid rgba(34,36,38,.15);
+    color: black;
+    border: 1px solid whitesmoke;
+    background-color: whitesmoke;
+
+}
+.backButt{
+    margin-left: 5px;
+    text-transform: none;
+    color: #0000009e;
+}
+
+.flex{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.centerPage{
+
+    width: 200px;
+    height: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.font{
+	    margin-left: 25px;
+}
+
+
+
+
+
+
+
