--- a/client/src/pages/CXPlaces/CXPlaces.css
+++ b/client/src/pages/CXPlaces/CXPlaces.css
@@ -136,3 +136,9 @@ button.sellButton.btn.btn-default{
     font-style: italic;
     font-size: 14px;
 }
+.cxName:hover{
+  color:#5183bf;
+}
+.address:hover{
+ color:#5183bf; 
+}
