--- a/client/src/pages/CXPlaces/CXPlaces.css
+++ b/client/src/pages/CXPlaces/CXPlaces.css
@@ -143,6 +143,7 @@ button.sellButton.btn.btn-default{
 .address:hover{
  color:#5183bf; 
 }
+/*iphone 6/7/8 plus */
 @media (min-width: 320px) and (max-width: 579px) {
   .list{
     margin-left: 0;
@@ -160,9 +161,39 @@ button.sellButton.btn.btn-default{
     left: 68.5%;
     width: 20%;
   }
-body {
-    background-size: cover!important;
-    background-repeat: no-repeat;
-    height: 100%;
+  body {
+    background-color: #a1c6eb;
+    background-image: none;
+  }
 }
+/*iphone X*/
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) {
+      .list {
+        width: 95%;
+      }
+      .mapButton{
+        width: 24%;
+      }
+      .listDetail{
+            width: 84%!important;
+      }
+}
+
+/*IPAD*/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)  {
+    .listBox{
+    width: 72%;
+    margin-left: 7%;
+    }
+    .mapButton {
+      width: 10.5%;
+      left: 69.5%;
+
+    }
+
 }
