--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: 37vh;
-  width: 100vw;
+/*  width: 100vw;*/  
   text-align: center;
 }
 h2{
