--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -111,6 +111,19 @@ h1 {
     border: 1px solid #c86b71;
     background-color: #c86b71;
 }
+button.btn{
+        color: black;
+    text-transform: none;
+    position: relative;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+    box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+    margin: 1rem 0;
+    border-radius: .28571429rem;
+    border: 1px solid rgba(34,36,38,.15);
+    color: black;
+    border: 1px solid whitesmoke;
+}
 
 @media (min-width: 320px) and (max-width: 579px) {
     .listDetail{
