--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -336,7 +336,7 @@ body {
     line-height: 1.4285em;
     color: rgba(0,0,0,.87);
     font-smoothing: antialiased;
-    background-image: url(https://images.unsplash.com/photo-1513257603633-6930aa2d0962?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=32bd1c0333ba12e6b0ac22bb09033794&auto=format&fit=crop&w=1500&q=80);
+    background-image: url("../../utils/background.jpg");
     background-size: cover;
 }
 .style__navbar___n7Lsv.style__sticky___3fVnd {
