--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -129,8 +129,8 @@ button.btn{
     .listDetail{
     display: flex!important;
     flex-direction: column!important;
-    margin-left: 13%!important;
-    width: 77%!important;
+    margin-left: 5%!important;
+    width: 90%!important;
     }
   .flex{
     display: block;
@@ -147,6 +147,9 @@ button.btn{
     .nameContainer {
     width: 255px;
     }
-    
+    .panel-default {
+        margin-left: 1%;
+        width:85%;
+    }
 }
 
