--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -2,7 +2,17 @@
   max-width: 150px;
   margin-bottom: 20px;
 }
+ .profile-area {
+   margin-top: 100px;
+ }
 
 .panel-body h3 {
   margin-top: 0;
+}
+
+@media (min-width: 320px) and (max-width: 579px) {
+  .btn-margin {
+    width: 30% !important;
+  }
+ 
 }
