--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -152,3 +152,22 @@ button.btn{
     }
 }
 
+/*IPAD*/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)  {
+    .listBox{
+    width: 72%;
+    margin-left: 7%;
+    }
+    .mapButton {
+      width: 10.5%;
+      left: 69.5%;
+
+    }
+    a {
+      width: inherit;
+    }
+
+}
+
