--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,12 +1,32 @@
 .footer {
+    display: flex;
      clear: both;
      background:rgba(0,0,0,0.08);
-     color: White;
      height: 62px;
-     text-align: center;
+     justify-content: space-evenly;
      line-height: 62px;
      position: static;
      bottom: 0;
      width: 100%;
      margin-top: 10px;
 } 
+
+.githubLogo{
+    height: 39px;
+    background:rgba(0, 0, 0, 0.2);
+    border: 2px solid black;
+    margin-left: 1%;
+    border-radius: 5%;
+}
+
+.copyright{
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.aboutButton{
+  border: 2px solid black !important;
+  background:rgba(0, 0, 0, 0.2) !important;
+  font-weight: bold;
+}
