--- a/client/src/pages/CXPlaces/CXPlaces.css
+++ b/client/src/pages/CXPlaces/CXPlaces.css
@@ -2,8 +2,7 @@
     background: #fff;
     -webkit-box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
-    margin: 1rem 0;
-    margin-left: 15%;
+    margin: auto;
     padding: 1em 1em;
     border-radius: .28571429rem;
     border: 1px solid rgba(34,36,38,.15);	
@@ -55,9 +54,12 @@ a {
 
 .buttons {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
-  right:20%;
+}
+
+.cxplaceContainer {
+  display: flex;
+  flex-direction: column;
 }
 
 .buyBox {
